--- a/display.html
+++ b/display.html
@@ -8,27 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Display</h1>
+        <h3>Display</h3>
         <div class="display">
-            <p>
-                
-            </p>
+            <img src="assets/dp2.png" alt="board">
+            <img src="assets/dp1.png" alt="board">
+            <img src="assets/dp3.png" alt="board">
         </div>
-        <a href="index.html">Quay lại trang chính</a>
-    </div>
-    <div class="links">
-        <a href="rule.html">
-            <div class="icon rule-icon">
-                <img src="assets\rule.png" alt="Rule Icon">
-                <span>Rules</span>
-            </div>
-        </a>
-        <a href="display.html">
-            <div class="icon display-icon">
-                <img src="assets\display.png" alt="Display Icon">
-                <span>Display</span>
-            </div>
-        </a>
+        <a href="index.html">Back</a>
     </div>
 </body>
 </html>
