--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,25 +8,31 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tic Tac Toe</h1>
+        <h1>
+            <img src="assets/tictactoe.png" alt="Tictactoe Icon">
+        </h1>
         <div class="overview">
             <h2>Overview</h2>
-            <p>
-                Tic Tac Toe, hay còn gọi là X và O, là một trò chơi cổ điển mà hai người chơi cố gắng xếp ba ký hiệu của mình theo hàng ngang, hàng dọc hoặc đường chéo. Trò chơi này đã xuất hiện từ thời cổ đại và phổ biến trên toàn thế giới.
+            <p>     
+                Before we jump right into exploring the purpose, rules and gameplay, let’s take a look at where the game comes from. 
+                Many don’t know this, but Tic-Tac-Toe is a game derived from Terni Lapilli, which is a game that was played in the 1st Century BC 
+                in the Roman Empire. Evidence of this is seen in the drawings of this game over Rome. Back then, players used 3 pebbles to play with.
+                The pebbles would need to be moved around at each turn, which means that Terni Lapilli was a slightly more complicated game than today’s Tic-Tac-Toe. 
+                Now, with a bit of background on the origins of the game, let’s dive into the nitty-gritty of how it is played. 
             </p>
         </div>
     </div>
     <div class="links">
-        <a href="rule.html">
-            <div class="icon rule-icon">
-                <img src="assets\rule.png" alt="Rule Icon">
-                <span>Rules</span>
-            </div>
-        </a>
         <a href="display.html">
             <div class="icon display-icon">
-                <img src="assets\display.png" alt="Display Icon">
+                <img src="assets/display.png" alt="Display Icon">
                 <span>Display</span>
+            </div>
+        </a>
+        <a href="rule.html">
+            <div class="icon rule-icon">
+                <img src="assets/rule.png" alt="Rule Icon">
+                <span>Rules</span>
             </div>
         </a>
     </div>
