--- a/rule.html
+++ b/rule.html
@@ -8,27 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Rules of Tic Tac Toe</h1>
+        <h3>Rules of Tic Tac Toe</h3>
         <div class="rules">
-            <p>
-                
-            </p>
+            <p1>
+                When playing Tic-Tac-Toe, there are several simple and easy-to-follow rules that you should observe. The rules that you need to be aware of include the following:
+            </p1>
+            <ul>
+                <li>The traditional version of Tic-Tac-Toe must be played on a 3x3 grid that incorporates 9 squares.</li>
+                <li>Players must select their mark before the game starts (either X or O) and must play the entire game using the same mark.</li>
+                <li>Players must take turns, making only 1 mark with each turn.</li>
+                <li>Marks can only be placed in empty squares, and once it is placed, it is permanent.</li>
+                <li>The winner is the first player to get 3 of their marks in a straight line (the line can be positioned diagonally, vertically, or horizontally).</li>
+                <li>The game is over when all 9 squares are filled with marks, even if none of the players have a straight line of 3 marks.</li>
+                <li>If neither player has a straight line of 3 marks, it is considered a tie.</li>
+            </ul>
         </div>
-        <a href="index.html">Quay lại trang chính</a>
-    </div>
-    <div class="links">
-        <a href="rule.html">
-            <div class="icon rule-icon">
-                <img src="assets\rule.png" alt="Rule Icon">
-                <span>Rules</span>
-            </div>
-        </a>
-        <a href="display.html">
-            <div class="icon display-icon">
-                <img src="assets\display.png" alt="Display Icon">
-                <span>Display</span>
-            </div>
-        </a>
+        <a href="index.html">Back</a>
     </div>
 </body>
 </html>
